# DxLibForHTML5

./: .gitignore  .gitmodules  .travis.yml  Build.sh  CMakeLists.txt  DxASyncLoad.cpp  DxASyncLoad.h  DxArchive_.cpp  DxArchive_.h  DxBaseFunc.cpp  DxBaseFunc.h  DxBaseImage.cpp  DxBaseImage.h  DxChar.cpp  DxChar.h  DxCharCodeTable.cpp  DxCompileConfig.h  DxDataType.h  DxDataTypeAndroid.h  DxDataTypeHTML5.h  DxDataTypeWin.h  DxDataTypeiOS.h  DxDrawFuncBorland.bdp  DxDrawFuncMake.vcproj  DxFile.cpp  DxFile.h  DxFont.cpp  DxFont.h  DxFunctionAndroid.h  DxFunctionWin.h  DxFunctioniOS.h  DxGateway.cpp  DxGraphics.cpp  DxGraphics.h  DxGraphicsFilter.cpp  DxGraphicsFilter.h  DxHandle.cpp  DxHandle.h  DxHeap.cpp  DxHeap.h  (+67 more)
Android/: DxBaseFuncAndroid.cpp  DxBaseFuncAndroid.h  DxBaseImageAndroid.cpp  DxBaseImageAndroid.h  DxFileAndroid.cpp  DxFileAndroid.h  DxFontAndroid.cpp  DxFontAndroid.h  DxGraphicsAndroid.cpp  DxGraphicsAndroid.h  DxGraphicsFilterAndroid.cpp  DxGraphicsFilterAndroid.h  DxInputAndroid.cpp  DxInputAndroid.h  DxJavaAndroid.cpp  DxJavaAndroid.h  DxLive2DCubism4Android.cpp  DxLive2DCubism4Android.h  DxLogAndroid.cpp  DxLogAndroid.h  DxMaskAndroid.cpp  DxMaskAndroid.h  DxMemoryAndroid.cpp  DxMemoryAndroid.h  DxModelAndroid.cpp  DxModelAndroid.h  DxMovieAndroid.cpp  DxMovieAndroid.h  DxNetworkAndroid.cpp  DxNetworkAndroid.h  DxShaderCodeBin_Base3D_Android.cpp  DxShaderCodeBin_Base_Android.cpp  DxShaderCodeBin_Filter_Android.cpp  DxShaderCodeBin_Live2D_Cubism4_Android.cpp  DxShaderCodeBin_Model_Android.cpp  DxShaderCodeBin_RgbaMix_Android.cpp  DxShader_Common_Android.h  DxShader_DataType_Android.h  DxShader_FS_Android.h  DxShader_VS_Android.h  (+10 more)
HTML5/: CMakeLists.txt  DxBaseFuncHTML5.cpp  DxBaseFuncHTML5.h  DxBaseImageHTML5.cpp  DxBaseImageHTML5.h  DxBrowserFontHTML5.cpp  DxFileHTML5.cpp  DxFileHTML5.h  DxFontHTML5.cpp  DxFontHTML5.h  DxGraphicsFilterHTML5.cpp  DxGraphicsFilterHTML5.h  DxGraphicsHTML5.cpp  DxGraphicsHTML5.h  DxInputHTML5.cpp  DxInputHTML5.h  DxInputKeyCodesHTML5.h  DxLive2DCubism4HTML5.cpp  DxLive2DCubism4HTML5.h  DxLogHTML5.cpp  DxLogHTML5.h  DxMaskHTML5.cpp  DxMaskHTML5.h  DxMemoryHTML5.cpp  DxModelHTML5.h  (+27 more)
src/: CMakeLists.txt  DxASyncLoad.cpp  DxASyncLoad.h  DxArchive_.cpp  DxArchive_.h  DxBaseFunc.cpp  DxBaseFunc.h  DxBaseImage.cpp  DxBaseImage.h  DxChar.cpp  DxChar.h  DxCharCodeTable.cpp  DxCompileConfig.h  DxDataType.h  DxDataTypeAndroid.h  DxDataTypeWin.h  DxDataTypeiOS.h  DxDrawFuncMake.sln  DxFile.cpp  DxFile.h  DxFont.cpp  DxFont.h  DxFunctionAndroid.h  DxFunctionHTML5.h  DxFunctionWin.h  DxFunctioniOS.h  DxGateway.cpp  DxGraphics.cpp  DxGraphics.h  DxGraphicsFilter.cpp  DxGraphicsFilter.h  DxHandle.cpp  DxHandle.h  DxHeap.cpp  DxHeap.h  DxInput.cpp  DxInput.h  DxInputString.cpp  DxInputString.h  DxLib.h  (+59 more)
src/Android/: DxBaseFuncAndroid.cpp  DxBaseFuncAndroid.h  DxBaseImageAndroid.cpp  DxBaseImageAndroid.h  DxFileAndroid.cpp  DxFileAndroid.h  DxFontAndroid.cpp  DxFontAndroid.h  DxGraphicsAndroid.cpp  DxGraphicsAndroid.h  DxGraphicsFilterAndroid.cpp  DxGraphicsFilterAndroid.h  DxInputAndroid.cpp  DxInputAndroid.h  DxJavaAndroid.cpp  DxJavaAndroid.h  DxLive2DCubism4Android.cpp  DxLive2DCubism4Android.h  DxLogAndroid.cpp  DxLogAndroid.h  DxMaskAndroid.cpp  DxMaskAndroid.h  DxMemoryAndroid.cpp  DxMemoryAndroid.h  DxModelAndroid.cpp  DxModelAndroid.h  DxMovieAndroid.cpp  DxMovieAndroid.h  DxNetworkAndroid.cpp  DxNetworkAndroid.h  DxShaderCodeBin_Base3D_Android.cpp  DxShaderCodeBin_Base_Android.cpp  DxShaderCodeBin_Filter_Android.cpp  DxShaderCodeBin_Live2D_Cubism4_Android.cpp  DxShaderCodeBin_Model_Android.cpp  DxShaderCodeBin_RgbaMix_Android.cpp  DxShader_Common_Android.h  DxShader_DataType_Android.h  DxShader_FS_Android.h  DxShader_VS_Android.h  (+10 more)
src/HTML5/: CMakeLists.txt  DxBaseFuncHTML5.cpp  DxBaseFuncHTML5.h  DxBaseImageHTML5.cpp  DxBaseImageHTML5.h  DxBrowserFontHTML5.cpp  DxBrowserFontHTML5.h  DxFileHTML5.cpp  DxFileHTML5.h  DxFontHTML5.cpp  DxFontHTML5.h  DxGraphicsFilterHTML5.cpp  DxGraphicsFilterHTML5.h  DxGraphicsHTML5.cpp  DxGraphicsHTML5.h  DxInputHTML5.cpp  DxInputHTML5.h  DxLive2DCubism4HTML5.cpp  DxLive2DCubism4HTML5.h  DxLogHTML5.cpp  DxLogHTML5.h  DxMaskHTML5.cpp  DxMaskHTML5.h  DxMemoryHTML5.cpp  DxMemoryHTML5.h  DxModelHTML5.cpp  DxModelHTML5.h  DxMovieHTML5.cpp  DxMovieHTML5.h  DxNetworkHTML5.cpp  DxNetworkHTML5.h  DxShaderCodeBin_Base3D_HTML5.cpp  DxShaderCodeBin_Base_HTML5.cpp  DxShaderCodeBin_Filter_HTML5.cpp  DxShaderCodeBin_Live2D_Cubism4_HTML5.cpp  DxShaderCodeBin_Model_HTML5.cpp  DxShaderCodeBin_RgbaMix_HTML5.cpp  DxShader_Common_HTML5.h  DxShader_DataType_HTML5.h  DxShader_FS_HTML5.h  (+13 more)
src/Shader/Android/Base/: Base_2D_Normal.vert  Base_2D_StretchRect.vert  Base_Tex_Blend.flag
src/Shader/Android/Filter/: Gauss.flag  Hsb.flag  YuvToRgb.flag
src/Shader/Android/Live2D/: Cubism4_PixelMaskedPremult.flag  Cubism4_PixelNormalPremult.flag  Cubism4_PixelSetupMask.flag  Cubism4_VertMasked.vert  Cubism4_VertSetupMask.vert
src/Shader/Android/MV1DefaultShader/: MV1Default_PixelLighting.flag
src/Shader/iOS/Base/: Base_2D_Mask.vert  Base_2D_StretchRect.flag  Base_3D_PixelLighting.flag  Base_Tex.flag  Base_Tex_None.flag
src/Shader/iOS/Filter/: GradientMap.flag  Level.flag  Mono.flag  TwoColor.flag
src/Shader/iOS/Live2D/: Cubism4_VertNormal.vert
src/iOS/: DxBaseFunciOS.cpp  DxBaseFunciOS.h  DxBaseImageiOS.cpp  DxBaseImageiOS.h  DxFileiOS.cpp  DxFileiOS.h  DxFontiOS.cpp  DxFontiOS.h  DxGraphicsFilteriOS.cpp  DxGraphicsFilteriOS.h  DxGraphicsiOS.cpp  DxGraphicsiOS.h  DxInputiOS.cpp  DxInputiOS.h  DxLive2DCubism4iOS.cpp  DxLive2DCubism4iOS.h  DxLogiOS.cpp  DxLogiOS.h  DxMaskiOS.cpp  DxMaskiOS.h  DxMemoryiOS.cpp  DxMemoryiOS.h  DxModeliOS.cpp  DxModeliOS.h  DxMovieiOS.cpp  DxMovieiOS.h  DxNetworkiOS.cpp  DxNetworkiOS.h  DxObjectiveCPP.h  DxObjectiveCPP.mm  DxShaderCodeBin_Base3D_iOS.cpp  DxShaderCodeBin_Base_iOS.cpp  DxShaderCodeBin_Filter_iOS.cpp  DxShaderCodeBin_Live2D_Cubism4_iOS.cpp  DxShaderCodeBin_Model_iOS.cpp  DxShaderCodeBin_RgbaMix_iOS.cpp  DxShader_Common_iOS.h  DxShader_DataType_iOS.h  DxShader_FS_iOS.h  DxShader_VS_iOS.h  (+12 more)
(+101 files in other folders)
